[package]
name = "bencodex-rs"
version = "0.6.0"
authors = ["moreal <dev.moreal@gmail.com>"]
edition = "2024"
description = "The Rust implementation of Bencodex"
license = "MIT"
keywords = ["bencodex", "encoding", "decoding"]
homepage = "https://github.com/bencodex/bencodex-rs"
repository = "https://github.com/bencodex/bencodex-rs"
documentation = "https://docs.rs/crate/bencodex-rs"

[lib]
name = "bencodex"
path = "src/lib.rs"

[[bin]]
name = "bencodex"
path = "src/main.rs"
required-features = ["json-cli"]

[features]
default = ["std"]
std = ["alloc", "itertools/use_std", "num-bigint/std", "num-traits/std"]
alloc = ["itertools/use_alloc"]
json = ["std", "serde", "serde_json", "hex/std", "base64/std"]
json-cli = ["json", "clap"]
test = ["base64"]
simd = ["std"]                    # SIMD (runtime CPU detection)

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { version = "0.13.0", default-features = false }
itoa = "1"
num-traits = { version = "0.2.19", default-features = false }
num-bigint = { version = "0.4.6", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"], optional = true }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"], optional = true }
clap = { version = "4.5.8", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", optional = true }

[dev-dependencies]
yaml-rust = "0.4.5"
syn = "2.0.68"
quote = "1.0.36"
criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }
proptest = "1"
base64 = "0.22.1"
rand = "0.9"

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "decode"
harness = false

[profile.profiling]
inherits = "release"
debug = 2
strip = false
lto = false
